ViewImpl and ViewPrivileges completely separated via Akka, but still not ready for remoteactor